# cpp-go-channel

./: .gitignore  CMakeLists.txt  README.md  simple.cpp  simple_symmetric_transfer.cpp
go/: channel.go  go.mod
